--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
         pip install -r requirements.txt  # Adjust if you have dependencies
 
     - name: Run insider_trading_data.py
-      run: python path/to/insider_trading_data.py
+      run: python https://github.com/nikunjbaheti/NSE-Insider-Trading/insider_trading_data.py
 
     - name: Wait for 1 hour
       run: sleep 3600  # 3600 seconds = 1 hour
 
     - name: Run Promoter_Pledge.py
-      run: python path/to/Promoter_Pledge.py
+      run: python https://github.com/nikunjbaheti/NSE-Insider-Trading/Promoter_Pledge.py
