--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -1,8 +1,13 @@
 name: Run Scripts
 
 on:
+  workflow_run:
+    workflows: ["push"]
+    types:
+      - completed
+
   schedule:
-    - cron: '0 * * * *' # Schedule every hour
+    - cron: '0 */12 * * *' # Schedule every 12 hours
 
 jobs:
   run-scripts:
@@ -28,4 +33,4 @@ jobs:
       run: sleep 3600  # 3600 seconds = 1 hour
 
     - name: Run Promoter_Pledge.py
-      run: https://github.com/nikunjbaheti/NSE-Insider-Trading/Promoter_Pledge.py
+      run: python https://github.com/nikunjbaheti/NSE-Insider-Trading/Promoter_Pledge.py
