--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,39 +1,43 @@
 name: Run Scripts
 
 on:
-  workflow_dispatch:
-    inputs:
-      run-now:
-        description: 'Run scripts immediately'
-        required: false
-        default: 'false'
-
+	workflow_dispatch:
+		inputs:
+		run-now:
+			description: 'Run scripts immediately'
+			required: false
+			default: 'false'
+  
   schedule:
-    - cron: '0 * * * *' # Schedule every hour
+    - cron: '0 * * * *' # Schedule every hour	
 
 jobs:
-  run-scripts:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: checkout repo content
+        uses: actions/checkout@v2 # checkout the repository content
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' # install the python version needed
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt  # Adjust if you have dependencies
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run insider_trading_data.py
-      run: python insider_trading_data.py
+	  - name: Run insider_trading_data.py
+        run: python insider_trading_data.py
 
-    - name: Wait for 1 hour
-      if: ${{ github.event_name == 'schedule' }}
-      run: sleep 3600  # 3600 seconds = 1 hour
+      - name: Wait for 20 minutes
+		if: ${{ github.event_name == 'schedule' }}
+		run: sleep 1200  # 1200 seconds = 20 minutes
 
-    - name: Run Promoter_Pledge.py
-      run: python Promoter_Pledge.py
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' # install the python version needed
+
+      - name: Run Promoter_Pledge.py
+		run: python Promoter_Pledge.py
