--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,43 +1,44 @@
 name: Run Scripts
 
 on:
-workflow_dispatch:
-inputs:
-run-now:
-description: 'Run scripts immediately'
-required: false
-default: 'false'
-  
+  workflow_dispatch:
+    inputs:
+      run-now:
+        description: 'Run scripts immediately'
+        required: false
+        default: 'false'
+
   schedule:
-    - cron: '0 * * * *' # Schedule every hour	
+    - cron: '0 * * * *' # Schedule every hour
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo content
+      - name: Checkout repo content
         uses: actions/checkout@v2 # checkout the repository content
 
-      - name: setup python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # install the python version needed
+          python-version: '3.10' # install the Python version needed
 
-      - name: install python packages
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-	  - name: Run insider_trading_data.py
+      - name: Run insider_trading_data.py
         run: python insider_trading_data.py
 
       - name: Wait for 20 minutes
-		if: ${{ github.event_name == 'schedule' }}
-		run: sleep 1200  # 1200 seconds = 20 minutes
+        if: ${{ github.event_name == 'schedule' }}
+        run: sleep 1200  # 1200 seconds = 20 minutes
 
+      - name: Setup Python (again)
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # install the python version needed
+          python-version: '3.10' # install the Python version needed
 
       - name: Run Promoter_Pledge.py
-		run: python Promoter_Pledge.py
+        run: python Promoter_Pledge.py
