--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,9 +23,13 @@ jobs:
         with:
           python-version: '3.10' # install the Python version needed
 
-      - name: Install Python packages
+      - name: Set up virtual environment
         run: |
-          sudo pip install -r requirements.txt
+          python -m venv venv
+          source venv/bin/activate 
+
+     - name: Install dependencies
+       run: pip install -r requirements.txt
 
       - name: Run insider_trading_data.py
         run: python insider_trading_data.py
