--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,7 +29,7 @@ jobs:
           source venv/bin/activate 
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install requests-html numpy pandas yfinance
 
       - name: Run insider_trading_data.py
         run: python insider_trading_data.py
