--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Run insider_trading_data.py
         run: python insider_trading_data.py
+        env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Wait for 20 minutes
         if: ${{ github.event_name == 'schedule' }}
@@ -40,3 +42,5 @@ jobs:
 
       - name: Run Promoter_Pledge.py
         run: python Promoter_Pledge.py
+        env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
