--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Run insider_trading_data.py
         run: python insider_trading_data.py
 
-      - name: Wait for 20 minutes
-        if: ${{ github.event_name == 'schedule' }}
-        run: sleep 1200  # 1200 seconds = 20 minutes
+     # - name: Wait for 20 minutes
+      #  if: ${{ github.event_name == 'schedule' }}
+       # run: sleep 1200  # 1200 seconds = 20 minutes
 
       - name: Run Promoter_Pledge.py
         run: python Promoter_Pledge.py
