--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,12 +31,17 @@ jobs:
       - name: Install dependencies
         run: pip install requests-html numpy pandas yfinance
 
+      - name: Use the PAT for authentication
+        run: |
+          # Use the PAT as an environment variable
+          export TOKEN=$PAT_TOKEN
+
       - name: Run insider_trading_data.py
-        run: python insider_trading_data.py ${{ secrets.GITHUB_TOKEN }}
+        run: python insider_trading_data.py
 
      # - name: Wait for 20 minutes
       #  if: ${{ github.event_name == 'schedule' }}
        # run: sleep 1200  # 1200 seconds = 20 minutes
 
       - name: Run Promoter_Pledge.py
-        run: python Promoter_Pledge.py ${{ secrets.GITHUB_TOKEN }}
+        run: python Promoter_Pledge.py
