--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Use the PAT for authentication
         run: |
           # Use the PAT as an environment variable
-          export PAT_TOKEN=$PAT_TOKEN
+          export PAT_TOKEN="${{ secrets.PAT_TOKEN }}"
 
       - name: Run insider_trading_data.py
         run: python insider_trading_data.py
