--- a/.github/workflows/python-scripts.yml
+++ b/.github/workflows/python-scripts.yml
@@ -34,7 +34,7 @@ jobs:
         echo "PAT_TOKEN=${{ secrets.PAT_TOKEN }}" >> $GITHUB_ENV
 
     - name: Run Script 1
-      run: python scripts/Github_Insider.py
+      run: python Github_Insider.py
 
     #- name: Run Script 2
     #  run: python scripts/script2.py
