--- a/.github/workflows/python-scripts.yml
+++ b/.github/workflows/python-scripts.yml
@@ -13,15 +13,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip install -r python/requirements.txt
 
     - name: Run script
       run: python python/Github_auto_execute.py
