--- a/.github/workflows/python-scripts.yml
+++ b/.github/workflows/python-scripts.yml
@@ -23,7 +23,7 @@ jobs:
         pip install requests-html numpy pandas yfinance schedule
 
     - name: Run script
-      run: python Github_auto_execute.py
+      run: python Github_insider.py
       env:
         GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
-        GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
+        GITHUB_PAT: ${{ secrets.PAT_TOKEN }}
