--- a/.github/workflows/Run Scripts.yml
+++ b/.github/workflows/Run Scripts.yml
@@ -28,10 +28,10 @@ jobs:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           python Symbols.py
-        #  python StkData.py
-        #  python Updated_Mktcap.py
-        #  python promoter_pledge.py
-        #  python insider_trading_data.py
+          python StkData.py
+          python Updated_Mktcap.py
+          python promoter_pledge.py
+          python insider_trading_data.py
 
       - name: Upload CSV file to GitHub
         uses: actions/upload-artifact@v4
@@ -50,3 +50,47 @@ jobs:
           git add Symbols.csv
           git commit -m "Automated commit - Symbols.csv" || true
           git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+          
+      - name: Create or update insider.csv
+        run: |
+            echo "Your CSV data" > insider.csv
+            git config --global user.email "actions@github.com"
+            git config --global user.name "GitHub Actions"
+            git add insider.csv
+            git commit -m "Automated commit - insider.csv" || true
+            git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+		  
+		  
+      - name: Create or update mktcap.csv
+        run: |
+          echo "Your CSV data" > mktcap.csv
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add mktcap.csv
+          git commit -m "Automated commit - mktcap.csv" || true
+          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+		  
+		  
+		  
+      - name: Create or update pledge.csv
+        run: |
+          echo "Your CSV data" > pledge.csv
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add pledge.csv
+          git commit -m "Automated commit - pledge.csv" || true
+          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+		  
+		  
+		  
+      - name: Create or update stkdata.csv
+        run: |
+          echo "Your CSV data" > stkdata.csv
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add stkdata.csv
+          git commit -m "Automated commit - stkdata.csv" || true
+          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+          
