--- a/.github/workflows/Run Scripts.yml
+++ b/.github/workflows/Run Scripts.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          python -m pip install requests_html numpy pandas yfinance  # Replace 'path/to/requirements.txt' with the actual path
+          python -m pip install requests_html schedule numpy pandas yfinance  # Replace 'path/to/requirements.txt' with the actual path
 
       - name: Run Python Scripts
         env:
