--- a/.github/workflows/Run Scripts.yml
+++ b/.github/workflows/Run Scripts.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          python -m pip install requests-html datetime numpy pandas yfinance  # Replace 'path/to/requirements.txt' with the actual path
+          python -m pip install requirements.txt  # Replace 'path/to/requirements.txt' with the actual path
 
       - name: Run Python Scripts
         env:
